--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marco Lopez</title>
   </head>
-  <body class="bg-white text-black">
+  <body class="bg-[#f8fafc] text-black">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
